Fixed broken layout when live search is used for all listings

--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -1,3 +1,8 @@
+& when (@critical) {
+    :where(.columns #livesearch_root) {
+        grid-column: ~"1 / 3";
+    }
+}
 & when not (@critical) {
     .minisearch .search-autocomplete:has(.livesearch) {
         padding: 0;
